[gd_scene format=3 uid="uid://t43p64se4nw2"]

[ext_resource type="LabelSettings" path="res://ui/level_font.tres" id="1_v3oc8"]
[ext_resource type="Script" uid="uid://cphvsgl0xmoaa" path="res://ui/global_ui.gd" id="1_xtvba"]
[ext_resource type="Theme" uid="uid://bkewb5tsxb15v" path="res://Assets/UI_Style/TestTheme.tres" id="2_mth86"]
[ext_resource type="Material" uid="uid://d2taim5ynxyw5" path="res://Assets/UI_Style/VignetteMaterial.tres" id="3_csxbd"]

[sub_resource type="CanvasTexture" id="CanvasTexture_85gms"]

[sub_resource type="LabelSettings" id="LabelSettings_xtvba"]
font_size = 32

[node name="GlobalUI" type="CanvasLayer" unique_id=352080034 node_paths=PackedStringArray("unpause_button")]
layer = 10
script = ExtResource("1_xtvba")
unpause_button = NodePath("PauseMenu/HBoxContainer/VBoxContainer/Button")

[node name="PauseMenu" type="Control" parent="." unique_id=1381962239]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BlackRect" type="TextureRect" parent="PauseMenu" unique_id=1700617898]
modulate = Color(0, 0, 0, 0.627451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_85gms")

[node name="HBoxContainer" type="HBoxContainer" parent="PauseMenu" unique_id=1470344798]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="PauseMenu/HBoxContainer" unique_id=1374934394]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/HBoxContainer" unique_id=654658057]
layout_mode = 2
size_flags_horizontal = 3

[node name="Control" type="Control" parent="PauseMenu/HBoxContainer/VBoxContainer" unique_id=2087065895]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="PauseLabel" type="Label" parent="PauseMenu/HBoxContainer/VBoxContainer" unique_id=1854151885]
layout_mode = 2
theme = ExtResource("2_mth86")
text = "GAME PAUSED"
label_settings = SubResource("LabelSettings_xtvba")
horizontal_alignment = 1

[node name="Button" type="Button" parent="PauseMenu/HBoxContainer/VBoxContainer" unique_id=2130811734]
layout_mode = 2
theme = ExtResource("2_mth86")
text = "Resume"

[node name="Control2" type="Control" parent="PauseMenu/HBoxContainer/VBoxContainer" unique_id=731471348]
layout_mode = 2
size_flags_vertical = 3

[node name="Control2" type="Control" parent="PauseMenu/HBoxContainer" unique_id=1227772999]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelEndPrompt" type="Control" parent="." unique_id=1572148619]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_mth86")

[node name="BlackRect" type="TextureRect" parent="LevelEndPrompt" unique_id=279354583]
visible = false
modulate = Color(0, 0, 0, 0.627451)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("CanvasTexture_85gms")

[node name="LevelWonText" type="Label" parent="LevelEndPrompt" unique_id=703043525]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -118.0
offset_top = -22.5
offset_right = 118.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "Good work, Officer, you've found the target."
label_settings = ExtResource("1_v3oc8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelLost" type="Label" parent="LevelEndPrompt" unique_id=2052057929]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -22.5
offset_right = 231.0
offset_bottom = 22.5
grow_horizontal = 2
grow_vertical = 2
text = "PICK ONLY THE CLANKERS! DON'T MESS UP!"
label_settings = ExtResource("1_v3oc8")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonNextLevel" type="Button" parent="LevelEndPrompt" unique_id=1348541048]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 35.0
offset_right = 60.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
text = "Next Level"

[node name="ButtonRestart" type="Button" parent="LevelEndPrompt" unique_id=1378352551]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = 35.0
offset_right = 116.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset_ratio = Vector2(0.5, 0.5)
theme = ExtResource("2_mth86")
text = "Restart"

[node name="TextureRect" type="TextureRect" parent="LevelEndPrompt" unique_id=193947369]
visible = false
modulate = Color(0, 0, 0, 1)
self_modulate = Color(0, 0, 0, 1)
material = ExtResource("3_csxbd")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
